--- a/Laboratory.Web/appsettings.json
+++ b/Laboratory.Web/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ServiceUrls": {
+    //  "PatientAPI": "https://localhost:7001",
+    "AuthAPI": "https://localhost:7001",
+    "TestAPI": "https://localhost:7003"
+  }
 }
