--- a/Laboratory.Web/appsettings.json
+++ b/Laboratory.Web/appsettings.json
@@ -9,6 +9,7 @@
   "ServiceUrls": {
     //  "PatientAPI": "https://localhost:7001",
     "AuthAPI": "https://localhost:7001",
-    "TestAPI": "https://localhost:7003"
+    "TestAPI": "https://localhost:7003",
+    "TestCartAPI": "https://localhost:7004"
   }
 }
