--- a/Laboratory.Services.TestCartAPI/appsettings.json
+++ b/Laboratory.Services.TestCartAPI/appsettings.json
@@ -5,5 +5,21 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server = DESKTOP-KD2EVP3\\SQLEXPRESS; Database=Laboratory_TestCart; Trusted_Connection = true; TrustServerCertificate = True "
+  },
+  "ApiSettings": {
+
+    "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET",
+    "Issuer": "laboratory-auth-api",
+    "Audience": "laboratory-client"
+  },
+  "ServiceUrls": {
+    "TestAPI": "https://localhost:7003"
+ //   "CouponAPI": "https://localhost:7001"
+ }
+  //"TopicAndQueueNames": {
+  //  "EmailShoppingCartQueue": "emailshoppingcart"
+  //}
 }
