--- a/Laboratory.Web/appsettings.json
+++ b/Laboratory.Web/appsettings.json
@@ -10,6 +10,7 @@
     //  "PatientAPI": "https://localhost:7001",
     "AuthAPI": "https://localhost:7001",
     "TestAPI": "https://localhost:7003",
-    "TestCartAPI": "https://localhost:7004"
+    "TestCartAPI": "https://localhost:7004",
+    "OrderAPI": "https://localhost:7005"
   }
 }
