--- a/Laboratory.Web/appsettings.json
+++ b/Laboratory.Web/appsettings.json
@@ -11,6 +11,7 @@
     "AuthAPI": "https://localhost:7001",
     "TestAPI": "https://localhost:7003",
     "TestCartAPI": "https://localhost:7004",
-    "OrderAPI": "https://localhost:7005"
+    "OrderAPI": "https://localhost:7005",
+    "TestParameterAPI": "https://localhost:7006"
   }
 }
